Changes fork: avoylenko/wwebjs-api - Step 3
